--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,11 @@ vignettes/*.pdf
 
 *_oculto/
 /oculto/
+oculto/
 
 *_other/
 /other/
+other/
 
 # Temporary files created by R markdown
 *.utf8.md
