--- a/.github/workflows/create-materials-zip.yml
+++ b/.github/workflows/create-materials-zip.yml
@@ -16,80 +16,156 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Create materials directory
-      run: |
-        mkdir -p materiales-tcee
+      run: mkdir -p materiales-tcee
         
-    - name: Copy all files
+    - name: Copy files except web assets
       run: |
-        # Copiar todo el repositorio
-        cp -r . materiales-tcee/
+        # Copiar archivos individuales (no directorios) evitando materiales-tcee
+        for item in *; do
+          if [ "$item" != "materiales-tcee" ] && [ -f "$item" ]; then
+            cp "$item" materiales-tcee/ 2>/dev/null || true
+          elif [ "$item" != "materiales-tcee" ] && [ -d "$item" ]; then
+            cp -r "$item" materiales-tcee/ 2>/dev/null || true
+          fi
+        done
         
-        # Eliminar archivos web del ZIP
+        # También copiar archivos ocultos excepto .git y .github
+        for item in .[^.]*; do
+          if [ "$item" != ".git" ] && [ "$item" != ".github" ] && [ -e "$item" ]; then
+            cp -r "$item" materiales-tcee/ 2>/dev/null || true
+          fi
+        done
+        
+    - name: Remove web assets from materials directory
+      run: |
         cd materiales-tcee
-        find . -type f \( -name "*.html" -o -name "*.css" -o -name "*.svg" -o -name "*.png" -o -name "*.jpg" -o -name "*.jpeg" -o -name "*.gif" -o -name "*.webp" -o -name "*.xml" -o -name ".gitignore" -o -name "CNAME" -o -name "*.txt" \) -delete
         
-        # Eliminar carpetas git
-        rm -rf .git .github
+        # Eliminar archivos web
+        find . -name "*.html" -type f -delete 2>/dev/null || true
+        find . -name "*.css" -type f -delete 2>/dev/null || true
+        find . -name "*.svg" -type f -delete 2>/dev/null || true
+        find . -name "*.png" -type f -delete 2>/dev/null || true
+        find . -name "*.jpg" -type f -delete 2>/dev/null || true
+        find . -name "*.jpeg" -type f -delete 2>/dev/null || true
+        find . -name "*.gif" -type f -delete 2>/dev/null || true
+        find . -name "*.webp" -type f -delete 2>/dev/null || true
+        find . -name "*.xml" -type f -delete 2>/dev/null || true
+        find . -name "*.txt" -type f -delete 2>/dev/null || true
+        find . -name ".gitignore" -type f -delete 2>/dev/null || true
+        find . -name "CNAME" -type f -delete 2>/dev/null || true
+        
+        # Eliminar carpetas .git y .github
+        rm -rf .git .github 2>/dev/null || true
+        
         cd ..
         
-    - name: List contents
+    - name: Check contents and create README if empty
       run: |
-        echo "=== Contenido del directorio materiales-tcee ==="
-        ls -la materiales-tcee/
-        echo ""
-        echo "=== Archivos que se incluirán en el ZIP ==="
-        find materiales-tcee -type f
+        cd materiales-tcee
+        
+        # Contar archivos
+        FILE_COUNT=$(find . -type f 2>/dev/null | wc -l)
+        echo "📊 Archivos encontrados: $FILE_COUNT"
+        
+        if [ "$FILE_COUNT" -eq 0 ]; then
+          echo "⚠️ No hay archivos educativos en el repositorio"
+          echo "📝 Creando README explicativo..."
+          
+          cat > README.md << 'EOF'
+# Materiales TCEE - Víctor Gutiérrez Marcos
+
+## 📚 Acceso a los materiales
+
+Los materiales educativos (PDFs, documentos, plantillas) están alojados en **Google Drive**.
+
+### 🔗 Enlaces directos:
+
+- **Todos los materiales**: https://drive.google.com/drive/folders/1r8qGub-oZS4xKYF-dnT_TdQ2dyAzfxB_
+- **Sitio web completo**: https://victorgutierrezmarcos.es
+
+### 📖 Contenido disponible:
+
+- Temario completo (5 ejercicios)
+- Recursos de organización
+- Plantillas de estudio
+- Enlaces útiles
+
+---
+
+*Técnico Comercial y Economista del Estado - Promoción LXXIII*
+EOF
+          
+          echo "✅ README creado"
+        else
+          echo "✅ Se incluirán $FILE_COUNT archivos en el ZIP"
+          echo ""
+          echo "📄 Lista de archivos:"
+          find . -type f | sort
+        fi
+        
+        cd ..
         
     - name: Create ZIP file
       run: |
-        cd materiales-tcee
-        if [ "$(find . -type f | wc -l)" -eq 0 ]; then
-          echo "⚠️ AVISO: No hay archivos para incluir en el ZIP"
-          echo "Todos los materiales están en Google Drive"
-          # Crear un README explicativo
-          echo "# Materiales TCEE" > README.md
-          echo "" >> README.md
-          echo "Los materiales están disponibles en:" >> README.md
-          echo "https://drive.google.com/drive/folders/1r8qGub-oZS4xKYF-dnT_TdQ2dyAzfxB_" >> README.md
-          echo "" >> README.md
-          echo "O visita: https://victorgutierrezmarcos.es" >> README.md
-        fi
-        cd ..
         zip -r materiales-tcee.zip materiales-tcee/
+        echo ""
+        echo "📦 Información del ZIP:"
         ls -lh materiales-tcee.zip
+        echo ""
+        echo "📋 Contenido del ZIP (primeros 30 elementos):"
+        unzip -l materiales-tcee.zip | head -35
         
     - name: Get current date
       id: date
       run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
         
-    - name: Delete old release if exists
+    - name: Delete existing release and tag
       continue-on-error: true
       run: |
-        gh release delete materiales-latest --yes
-        git push origin :refs/tags/materiales-latest
+        echo "🗑️ Limpiando release anterior..."
+        gh release delete materiales-latest --yes 2>/dev/null || echo "No hay release previo"
+        git tag -d materiales-latest 2>/dev/null || echo "No hay tag local"
+        git push origin --delete materiales-latest 2>/dev/null || echo "No hay tag remoto"
+        echo "✅ Limpieza completada"
       env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_TOKEN: ${{ github.token }}
+        
+    - name: Wait before creating new release
+      run: sleep 3
         
     - name: Create new release
       run: |
+        echo "📤 Creando nuevo release..."
         gh release create materiales-latest \
-          --title "Materiales TCEE (Actualizado ${{ steps.date.outputs.date }})" \
+          materiales-tcee.zip \
+          --title "Materiales TCEE - ${{ steps.date.outputs.date }}" \
           --notes "## 📚 Materiales para la Oposición TCEE
+          
+          **Víctor Gutiérrez Marcos** - Promoción LXXIII
           
           ### ℹ️ Información importante
           
-          Los materiales principales (PDFs, documentos) están alojados en **Google Drive** y se acceden mediante los enlaces en la web.
+          Los materiales principales (PDFs, documentos de estudio) están alojados en **Google Drive** 
+          y se acceden mediante los enlaces en el sitio web.
           
-          Este ZIP contiene la estructura del sitio web sin archivos de diseño.
+          Este ZIP contiene archivos del repositorio de GitHub (si los hay).
           
-          ### 🔗 Enlaces útiles
+          ### 🔗 Acceso completo a los materiales:
           
-          - 🌐 **Web completa**: [victorgutierrezmarcos.es](https://victorgutierrezmarcos.es)
-          - 📁 **Google Drive**: [Ver materiales](https://drive.google.com/drive/folders/1r8qGub-oZS4xKYF-dnT_TdQ2dyAzfxB_)
+          - 🌐 **Sitio web**: [victorgutierrezmarcos.es](https://victorgutierrezmarcos.es)
+          - 📁 **Google Drive**: [Ver todos los materiales](https://drive.google.com/drive/folders/1r8qGub-oZS4xKYF-dnT_TdQ2dyAzfxB_)
+          
+          ### 📖 Contenido disponible:
+          
+          - Temario completo (Ejercicios I-V)
+          - Recursos de organización y planificación
+          - Plantillas para elaborar temas
+          - Enlaces útiles para la preparación
           
           ---
           
-          📅 Última actualización: ${{ steps.date.outputs.date }}" \
-          materiales-tcee.zip
+          📅 Actualizado: ${{ steps.date.outputs.date }}"
+        
+        echo "✅ Release creado exitosamente"
       env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_TOKEN: ${{ github.token }}
