--- a/.github/workflows/create-materials-zip.yml
+++ b/.github/workflows/create-materials-zip.yml
@@ -55,7 +55,7 @@ jobs:
         find . -name "CNAME" -type f -delete 2>/dev/null || true
         
         # Eliminar carpetas .git y .github
-        rm -rf .git .github 2>/dev/null || true
+        rm -rf .git .github backup 2>/dev/null || true
         
         cd ..
         
