--- a/.github/workflows/create-materials-zip.yml
+++ b/.github/workflows/create-materials-zip.yml
@@ -51,6 +51,8 @@ jobs:
         find . -name "*.webp" -type f -delete 2>/dev/null || true
         find . -name "*.xml" -type f -delete 2>/dev/null || true
         find . -name "*.txt" -type f -delete 2>/dev/null || true
+        find . -name "*.js" -type f -delete 2>/dev/null || true
+        find . -name "*.json" -type f -delete 2>/dev/null || true
         find . -name ".gitignore" -type f -delete 2>/dev/null || true
         find . -name "CNAME" -type f -delete 2>/dev/null || true
         
