--- a/.github/workflows/create-materials-zip.yml
+++ b/.github/workflows/create-materials-zip.yml
@@ -53,6 +53,7 @@ jobs:
         find . -name "*.txt" -type f -delete 2>/dev/null || true
         find . -name "*.js" -type f -delete 2>/dev/null || true
         find . -name "*.json" -type f -delete 2>/dev/null || true
+        find . -name ".yml" -type f -delete 2>/dev/null || true
         find . -name ".gitignore" -type f -delete 2>/dev/null || true
         find . -name "CNAME" -type f -delete 2>/dev/null || true
         
