Replace PowerShell index updater with JScript version
Migrates blog index updating from PowerShell (update-index.ps1) to a new JScript (update-index.js) script for better Windows compatibility. Updates render.bat to use the new script, modifies index.html to add a new article, and adjusts settings.local.json to include a Node.js check. Also updates the example PDF.

--- a/.github/workflows/create-materials-zip.yml
+++ b/.github/workflows/create-materials-zip.yml
@@ -60,7 +60,7 @@ jobs:
         find . -name "CNAME" -type f -delete 2>/dev/null || true
         
         # Eliminar carpetas .git y .github
-        rm -rf .git .github backup blog 2>/dev/null || true
+        rm -rf .git .github backup blog .claude 2>/dev/null || true
         
         cd ..
         
