Update materials and cleanup workflow
Expanded the workflow to delete .md files, updated the section title in index.html, replaced the official test PDF, and removed the outdated updated test PDF.

--- a/.github/workflows/create-materials-zip.yml
+++ b/.github/workflows/create-materials-zip.yml
@@ -17,24 +17,16 @@ jobs:
       
     - name: Create materials directory
       run: mkdir -p materiales-tcee
-        
-    - name: Copy files except web assets
+
+    - name: Copy only oposicion directory contents
       run: |
-        # Copiar archivos individuales (no directorios) evitando materiales-tcee
-        for item in *; do
-          if [ "$item" != "materiales-tcee" ] && [ -f "$item" ]; then
-            cp "$item" materiales-tcee/ 2>/dev/null || true
-          elif [ "$item" != "materiales-tcee" ] && [ -d "$item" ]; then
-            cp -r "$item" materiales-tcee/ 2>/dev/null || true
-          fi
-        done
-        
-        # También copiar archivos ocultos excepto .git y .github
-        for item in .[^.]*; do
-          if [ "$item" != ".git" ] && [ "$item" != ".github" ] && [ -e "$item" ]; then
-            cp -r "$item" materiales-tcee/ 2>/dev/null || true
-          fi
-        done
+        # Copiar solo el contenido de la carpeta oposicion
+        if [ -d "oposicion" ]; then
+          cp -r oposicion/* materiales-tcee/ 2>/dev/null || true
+        else
+          echo "Error: La carpeta oposicion no existe"
+          exit 1
+        fi
         
     - name: Remove web assets from materials directory
       run: |
@@ -56,11 +48,12 @@ jobs:
         find . -name "*.js" -type f -delete 2>/dev/null || true
         find . -name "*.json" -type f -delete 2>/dev/null || true
         find . -name ".yml" -type f -delete 2>/dev/null || true
+        find . -name ".md" -type f -delete 2>/dev/null || true
         find . -name ".gitignore" -type f -delete 2>/dev/null || true
         find . -name "CNAME" -type f -delete 2>/dev/null || true
         
-        # Eliminar carpetas .git y .github
-        rm -rf .git .github backup blog .claude 2>/dev/null || true
+        # Eliminar carpetas que no deben incluirse
+        rm -rf .git .github 2>/dev/null || true
         
         cd ..
         
